mqtt is working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,14 @@ version: "3"
 
 services:
   mosquitto:
-    container_name: mosquitto_container_iot
     image: eclipse-mosquitto
+    restart: always
     ports:
       - 1883:1883
       - 8883:8883
     volumes:
-      - mosquitto-data:/mosquitto/data
-      - mosquitto-logs:/mosquitto/logs
-      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
-    restart: unless-stopped
+      - ./mqtt/data:/mosquitto/data
+      - ./mqtt/logs:/mosquitto/logs
+      - ./mqtt/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
-volumes:
-  store:
-  config:
-  mosquitto-data:
-  mosquitto-logs:
+
