--- a/mqtt/mosquitto.conf
+++ b/mqtt/mosquitto.conf
@@ -1,4 +1,8 @@
 persistence true
 persistence_location /mosquitto/data/
+
 log_dest file /mosquitto/log/mosquitto.log
+
 bind_address 0.0.0.0
+
+allow_anonymous true
