--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     ports:
       - 1883:1883
       - 8883:8883
-    networks:
-      - node-red-net
     volumes:
       - ./mqtt/data:/mosquitto/data
       - ./mqtt/logs:/mosquitto/logs
@@ -18,16 +16,29 @@ services:
     environment:
       - TZ=Asia/Bangkok
     ports:
-      - "1880:1880"
-    networks:
-      - node-red-net
+      - 1880:1880
     volumes:
       - node-red-data:/data
     links:
       - mosquitto
+  mongo:
+    image: mongo
+    volumes:
+      - ./mongo/db:/data/db
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
 
 volumes:
   node-red-data:
-
-networks:
-  node-red-net:
