--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async-mqtt": "^2.6.1",
-    "mqtt": "^4.2.8"
+    "mqtt": "^4.2.8",
+    "node-red-contrib-sonoff-tasmota": "^3.0.0"
   }
 }
